# ports

./: MOVED  README.md  UPDATING  index.html  params.json
Mk/: bsd.port.mk
archivers/hs-tar/: Makefile
archivers/hs-zip-archive/: Makefile  distinfo
archivers/hs-zlib/: Makefile  pkg-descr
archivers/hs-zlib-bindings/: Makefile  distinfo
archivers/hs-zlib-conduit/: Makefile  distinfo
archivers/hs-zlib-enum/: Makefile  distinfo
audio/hs-ALUT/: Makefile
audio/hs-OpenAL/: Makefile  pkg-descr
audio/hs-libmpd/: Makefile  distinfo
benchmarks/hs-criterion/: Makefile  distinfo
benchmarks/hs-criterion/files/: patch-Criterion.hs  patch-Criterion__Analysis__Types.hs  patch-Criterion__Environment.hs  patch-Criterion__Plot.hs  patch-criterion.cabal
converters/hs-aeson/: Makefile  distinfo  pkg-descr
converters/hs-aeson-native/: Makefile  distinfo
converters/hs-aeson-pretty/: Makefile
converters/hs-dataenc/: Makefile  distinfo
converters/hs-iconv/: Makefile  distinfo  pkg-descr
converters/hs-iconv/files/: nopatch-iconv.cabal
converters/hs-json/: Makefile
converters/hs-json/files/: patch-json.cabal
converters/hs-sandi/: Makefile
databases/hs-esqueleto/: Makefile  distinfo  pkg-descr
databases/hs-hedis/: Makefile
databases/hs-mysql/: Makefile  distinfo
databases/hs-mysql-simple/: Makefile  distinfo  pkg-descr
databases/hs-persistent/: Makefile  distinfo
databases/hs-persistent-sqlite/: Makefile  distinfo
databases/hs-persistent-template/: Makefile  distinfo
databases/hs-persistent/files/: patch-Database__Persist__Base.hs  patch-Database__Persist__GenericSql.hs  patch-persistent.cabal
deskutils/checkrdf/: Makefile
devel/cvs2darcs/: Makefile
devel/haskell-platform/: Makefile
devel/hs-BNFC/: Makefile
devel/hs-Boolean/: Makefile  distinfo  pkg-descr
devel/hs-BoundedChan/: Makefile
devel/hs-Cabal/: Makefile  distinfo  pkg-descr  pkg-plist
devel/hs-ConfigFile/: Makefile  pkg-descr
devel/hs-DeepArrow/: Makefile  distinfo  pkg-descr
devel/hs-DrIFT/: Makefile
devel/hs-Glob/: Makefile  distinfo
devel/hs-HUnit/: Makefile
devel/hs-IORefCAS/: Makefile
devel/hs-IfElse/: Makefile
devel/hs-List/: Makefile  distinfo  pkg-descr
devel/hs-ListLike/: Makefile  distinfo  pkg-descr
devel/hs-MaybeT/: Makefile
devel/hs-MemoTrie/: Makefile  distinfo
devel/hs-MissingH/: Makefile  distinfo  pkg-descr
devel/hs-MonadCatchIO-mtl/: Makefile  pkg-descr
devel/hs-MonadCatchIO-transformers/: Makefile
devel/hs-MonadRandom/: Makefile  distinfo
devel/hs-ObjectName/: Makefile
devel/hs-PSQueue/: Makefile  pkg-descr
devel/hs-QuickCheck/: Makefile
devel/hs-QuickCheck-docs/: Makefile  pkg-descr
devel/hs-ReadArgs/: Makefile  pkg-descr
devel/hs-STMonadTrans/: Makefile
devel/hs-SafeSemaphore/: Makefile  pkg-descr
devel/hs-ShellCheck/: Makefile
devel/hs-StateVar/: Makefile  distinfo
devel/hs-Stream/: Makefile  pkg-descr
devel/hs-Tensor/: Makefile
devel/hs-TypeCompose/: Makefile  distinfo  pkg-descr
devel/hs-abstract-deque/: Makefile  distinfo
devel/hs-abstract-par/: Makefile
devel/hs-activehs-base/: Makefile  distinfo  pkg-descr
devel/hs-alex/: Makefile  pkg-plist
devel/hs-annotated-wl-pprint/: Makefile  distinfo  pkg-descr
devel/hs-ansi-terminal/: Makefile  distinfo
devel/hs-ansi-wl-pprint/: Makefile  distinfo
devel/hs-arrows/: Makefile  pkg-descr
devel/hs-asn1-data/: Makefile  pkg-descr
devel/hs-asn1-encoding/: Makefile
devel/hs-asn1-parse/: Makefile
devel/hs-asn1-types/: Makefile  distinfo
devel/hs-async/: Makefile  distinfo  pkg-descr
devel/hs-atomic-primops/: Makefile  distinfo
devel/hs-atomic-primops/files/: patch-atomic-primops.cabal
devel/hs-attempt/: Makefile  pkg-descr
devel/hs-auto-update/: Makefile
devel/hs-base-orphans/: Makefile  distinfo
devel/hs-base-unicode-symbols/: Makefile  distinfo  pkg-descr
devel/hs-base16-bytestring/: Makefile  distinfo  pkg-descr
devel/hs-base64-bytestring/: Makefile
devel/hs-buildwrapper/files/: patch-buildwrapper.cabal  patch-src__Language__Haskell__BuildWrapper__GHC.hs
devel/hs-c2hs/files/: patch-c2hs.cabal  patch-src__C2HS__Gen__Bind.hs
devel/hs-cautious-file/files/: patch-cautious-file.cabal
devel/hs-charsetdetect-ae/files/: extra-patch-charsetdetect-ae.cabal
devel/hs-configurator/files/: patch-Data__Configurator.hs  patch-Data__Text__Lazy__Builder__Functions.hs  patch-Data__Text__Lazy__Builder__Int.hs  patch-Data__Text__Lazy__Builder__RealFloat.hs  patch-Data__Text__Lazy__Builder__RealFloat__Functions.hs  patch-configurator.cabal
devel/hs-darcs/files/: patch-Setup.lhs  patch-darcs.cabal  patch-src__Darcs__Repository.hs
devel/hs-data-pprint/files/: patch-data-pprint.cabal
devel/hs-executable-path/files/: patch-System_Environment_Executable.hs  patch-executable-path.cabal
devel/hs-filestore/files/: patch-filestore.cabal
devel/hs-ghc-events/files/: patch-ghc-events.cabal
devel/hs-git-annex/files/: patch-Assistant__Alert.hs  patch-Build__Configure.hs  patch-Build__DesktopFile.hs  patch-Control__Exception__Control.hs  patch-Control__Monad__IO__Control.hs  patch-Control__Monad__Trans__Control.hs  patch-Setup.hs  patch-Utility__libkqueue.c  patch-git-annex.cabal
devel/hs-haskeline/files/: patch-haskeline.cabal
devel/hs-hoogle/files/: patch-hoogle.cabal
devel/hs-hspec/files/: patch-hspec.cabal
devel/hs-iteratee/files/: patch-iteratee.cabal  patch-src_Data_Iteratee_Base.hs
devel/hs-leksah-server/files/: patch-leksah-server.cabal  patch-src__IDE__Utils__Tool.hs
devel/hs-lens/files/: patch-lens.cabal
devel/hs-llvm-general/files/: patch-Setup.hs  patch-llvm-general.cabal
devel/hs-ltk/files/: patch-ltk.cabal
devel/hs-monad-par-extras/files/: patch-monad-par-extras.cabal
devel/hs-pointedlist/files/: patch-pointedlist.cabal
devel/hs-process-conduit/files/: patch-process-conduit.cabal
devel/hs-scion-browser/files/: patch-scion-browser.cabal  patch-src__Scion__PersistentBrowser__Parser__Internal.hs
devel/hs-smallcheck/files/: patch-smallcheck.cabal
devel/hs-testing-feat/files/: patch-testing-feat.cabal
(+1591 files in other folders)
