--- ./persistent.cabal.orig	2011-12-27 20:08:04.000000000 +0100
+++ ./persistent.cabal	2012-01-04 13:19:11.000000000 +0100
@@ -23,7 +23,7 @@
                    , monad-control            >= 0.2     && < 0.4
                    , pool                     >= 0.1     && < 0.2
                    , blaze-html               >= 0.4     && < 0.5
-                   , path-pieces              >= 0.0     && < 0.1
+                   , path-pieces              >= 0.0
                    , mtl                      >= 2.0     && < 2.1
                    , data-object              >= 0.3.1.7 && < 0.4
                    , transformers-base
