--- ./buildwrapper.cabal.orig	2014-07-11 15:14:25.000000000 +0200
+++ ./buildwrapper.cabal	2014-07-12 22:04:00.000000000 +0200
@@ -41,7 +41,7 @@
                    unordered-containers,
                    utf8-string,
                    bytestring,
-                   attoparsec>=0.11 && <0.13,
+                   attoparsec>=0.10 && <0.13,
                    transformers,
                    deepseq
   ghc-options:     -Wall -fno-warn-unused-do-bind
