--- ./c2hs.cabal.orig	2011-08-20 22:01:30.000000000 +0200
+++ ./c2hs.cabal	2011-08-20 22:02:04.000000000 +0200
@@ -41,7 +41,7 @@
 
 Executable c2hs
     Build-Depends:  base >= 2 && < 5,
-                    language-c >= 0.3.1.1 && < 0.4.0,
+                    language-c >= 0.3.1.1,
                     filepath
 
     if flag(base3)
