--- cautious-file.cabal.orig	2013-01-01 21:32:20 UTC
+++ cautious-file.cabal
@@ -25,7 +25,7 @@ Flag posix
 
 Library
   hs-source-dirs:       src
-  build-Depends:	base >= 4, base < 5, directory >= 1.1, directory < 1.3, filepath >= 1.2, filepath < 1.4, bytestring >= 0.9, bytestring < 0.11
+  build-Depends:	base >= 4, base < 5, directory >= 1.1, directory < 1.3, filepath >= 1.2, filepath < 1.5, bytestring >= 0.9, bytestring < 0.11
   if flag(posix) && !os(Windows)
     cpp-options: -D_POSIX
     build-Depends: unix
