--- ./configurator.cabal.orig	2011-11-21 23:17:06.000000000 +0100
+++ ./configurator.cabal	2011-12-02 16:04:59.000000000 +0100
@@ -50,17 +50,24 @@
     Data.Configurator.Types
 
   other-modules:
+    Data.Text.Lazy.Builder.Functions
+    Data.Text.Lazy.Builder.Int
+    Data.Text.Lazy.Builder.RealFloat
+    Data.Text.Lazy.Builder.RealFloat.Functions
     Data.Configurator.Instances
     Data.Configurator.Parser
     Data.Configurator.Types.Internal
 
   build-depends:
+    array,
     attoparsec >= 0.10.0.2,
     base == 4.*,
     bytestring,
     directory,
+    ghc-prim,
     hashable,
-    text >= 0.11.1.0,
+    integer-gmp,
+    text >= 0.11,
     unix-compat,
     unordered-containers	
 
@@ -68,6 +75,7 @@
     ghc-options: -Werror
     ghc-prof-options: -auto-all
 
+  cpp-options: -DINTEGER_GMP
   ghc-options:      -Wall
 
 source-repository head
