--- ./darcs.cabal.orig	2011-03-13 23:40:47.000000000 +0100
+++ ./darcs.cabal	2012-04-09 13:11:51.000000000 +0200
@@ -170,7 +170,7 @@
 
     build-depends:   base          < 5,
                      extensible-exceptions >= 0.1 && < 0.2,
-                     regex-compat >= 0.71 && < 0.94,
+                     regex-compat >= 0.71,
                      mtl          >= 1.0 && < 2.1,
                      parsec       >= 2.0 && < 3.2,
                      html         == 1.0.*,
@@ -186,7 +186,7 @@
                      containers >= 0.1 && < 0.5,
                      array      >= 0.1 && < 0.4,
                      random     == 1.0.*,
-                     tar          == 0.3.*,
+                     tar        == 0.4.*,
                      zlib >= 0.5.1.0 && < 0.6.0.0,
                      QuickCheck   >= 2.1.0.0,
                      test-framework             >= 0.2.2,
@@ -375,14 +375,14 @@
 
     build-depends:   base          < 5,
                      extensible-exceptions >= 0.1 && < 0.2,
-                     regex-compat >= 0.71 && < 0.94,
+                     regex-compat >= 0.71,
                      mtl          >= 1.0 && < 2.1,
                      parsec       >= 2.0 && < 3.2,
                      html         == 1.0.*,
                      filepath     >= 1.1.0.0 && < 1.3.0.0,
                      haskeline    >= 0.6.2.2 && < 0.7,
                      hashed-storage >= 0.5.2 && < 0.6,
-                     tar          == 0.3.*
+                     tar          == 0.4.*
 
     if !os(windows)
       build-depends: unix >= 1.0 && < 2.5
@@ -523,14 +523,14 @@
 
   build-depends:   base          < 5,
                    extensible-exceptions >= 0.1 && < 0.2,
-                   regex-compat >= 0.71 && < 0.94,
+                   regex-compat >= 0.71,
                    mtl          >= 1.0 && < 2.1,
                    parsec       >= 2.0 && < 3.2,
                    html         == 1.0.*,
                    filepath     >= 1.1.0.0 && < 1.3.0.0,
                    haskeline    >= 0.6.2.2 && < 0.7,
                    hashed-storage >= 0.5.2 && < 0.6,
-                   tar          == 0.3.*
+                   tar          == 0.4.*
 
   if !os(windows)
     build-depends: unix >= 1.0 && < 2.5
@@ -619,7 +619,7 @@
 
     build-depends:   base          < 5,
                      extensible-exceptions >= 0.1 && < 0.2,
-                     regex-compat >= 0.71 && < 0.94,
+                     regex-compat >= 0.71,
                      mtl          >= 1.0 && < 2.1,
                      parsec       >= 2.0 && < 3.2,
                      html         == 1.0.*,
