--- ./darcs.cabal.orig	2012-04-22 17:14:14.000000000 +0200
+++ ./darcs.cabal	2012-05-09 11:31:03.000000000 +0200
@@ -371,7 +371,7 @@
                      haskeline    >= 0.6.3 && < 0.7,
                      hashed-storage >= 0.5.6 && < 0.6,
                      vector       >= 0.7,
-                     tar          == 0.3.*
+                     tar          >= 0.3
 
     if !os(windows)
       build-depends: unix >= 1.0 && < 2.6
@@ -532,7 +532,7 @@
                    haskeline    >= 0.6.3 && < 0.7,
                    hashed-storage >= 0.5.6 && < 0.6,
                    vector       >= 0.7,
-                   tar          == 0.3.*
+                   tar          >= 0.3
 
   if !os(windows)
     build-depends: unix >= 1.0 && < 2.6
@@ -729,7 +729,7 @@
                    array      >= 0.1 && < 0.5,
                    hashed-storage >= 0.5.6 && < 0.6,
                    vector       >= 0.7,
-                   tar        == 0.3.*,
+                   tar        >= 0.3,
                    random     == 1.0.*
 
     if flag(mmap) && !os(windows)
