--- ./darcs.cabal.orig	2012-04-22 17:14:14.000000000 +0200
+++ ./darcs.cabal	2012-05-12 19:41:32.000000000 +0200
@@ -364,14 +364,14 @@
 
     build-depends:   extensible-exceptions >= 0.1 && < 0.2,
                      regex-compat >= 0.95.1,
-                     mtl          >= 1.0 && < 2.1,
+                     mtl          >= 1.0 && < 2.2,
                      parsec       >= 2.0 && < 3.2,
                      html         == 1.0.*,
                      filepath     >= 1.1.0.0 && < 1.5.0.0,
                      haskeline    >= 0.6.3 && < 0.7,
                      hashed-storage >= 0.5.6 && < 0.6,
                      vector       >= 0.7,
-                     tar          == 0.3.*
+                     tar          >= 0.3
 
     if !os(windows)
       build-depends: unix >= 1.0 && < 2.6
@@ -525,14 +525,14 @@
 
   build-depends:   extensible-exceptions >= 0.1 && < 0.2,
                    regex-compat >= 0.95.1,
-                   mtl          >= 1.0 && < 2.1,
+                   mtl          >= 1.0 && < 2.2,
                    parsec       >= 2.0 && < 3.2,
                    html         == 1.0.*,
                    filepath     >= 1.1.0.0 && < 1.5.0.0,
                    haskeline    >= 0.6.3 && < 0.7,
                    hashed-storage >= 0.5.6 && < 0.6,
                    vector       >= 0.7,
-                   tar          == 0.3.*
+                   tar          >= 0.3
 
   if !os(windows)
     build-depends: unix >= 1.0 && < 2.6
@@ -612,7 +612,7 @@
 
     build-depends:   extensible-exceptions >= 0.1 && < 0.2,
                      regex-compat >= 0.95.1,
-                     mtl          >= 1.0 && < 2.1,
+                     mtl          >= 1.0 && < 2.2,
                      parsec       >= 2.0 && < 3.2,
                      html         == 1.0.*,
                      filepath     >= 1.1.0.0 && < 1.5.0.0,
@@ -729,7 +729,7 @@
                    array      >= 0.1 && < 0.5,
                    hashed-storage >= 0.5.6 && < 0.6,
                    vector       >= 0.7,
-                   tar        == 0.3.*,
+                   tar        >= 0.3,
                    random     == 1.0.*
 
     if flag(mmap) && !os(windows)
