--- ./data-pprint.cabal.orig	2012-02-21 16:19:09.000000000 +0100
+++ ./data-pprint.cabal	2012-06-25 16:39:19.000000000 +0200
@@ -66,7 +66,7 @@
   build-depends:
     base >= 4.0 && < 4.6,
     pretty >= 1.0 && < 1.2,
-    mtl >= 2.0 && < 2.1,
+    mtl >= 2.0 && < 2.2,
     deepseq >= 1.1 && < 1.4,
     time >= 1.2 && < 1.5,
     parallel >= 3.1 && < 3.3
