--- executable-path.cabal.orig	2011-12-01 21:09:30 UTC
+++ executable-path.cabal
@@ -44,7 +44,7 @@ Library
     Build-Depends:       unix
     Other-Modules:       System.Environment.Executable.Linux
     
-  if os(freebsd) 
+  if os(freebsd) || os(dragonfly)
     Build-Depends:       unix, directory
     Other-Modules:       System.Environment.Executable.FreeBSD
 
