--- ./filestore.cabal.orig	2012-05-30 21:30:38.000000000 +0200
+++ ./filestore.cabal	2012-10-03 16:59:46.000000000 +0200
@@ -42,7 +42,7 @@
                          process >= 1.0 && < 1.2,
                          time >= 1.1 && < 1.5,
                          xml >= 1.3 && < 1.4,
-                         split >= 0.1 && < 0.2,
+                         split >= 0.1 && < 0.3,
                          Diff >= 0.1.2 && < 0.2,
                          old-locale >= 1.0 && < 1.1
 
