--- ./ghc-events.cabal.orig	2012-11-01 18:39:59.000000000 +0100
+++ ./ghc-events.cabal	2014-01-11 23:33:15.000000000 +0100
@@ -29,7 +29,7 @@
   build-depends:    base       == 4.*,
                     mtl        >= 1.1 && < 3.0,
                     containers >= 0.2 && < 0.6,
-                    binary     >= 0.5 && < 0.7,
+                    binary     >= 0.5 && < 0.8,
                     bytestring >= 0.9.0,
                     array      >= 0.2 && < 0.5
   exposed-modules:  GHC.RTS.Events,
