--- ./git-annex.cabal.orig	2013-07-09 21:04:14.000000000 +0100
+++ ./git-annex.cabal	2013-07-14 18:18:40.000000000 +0100
@@ -133,7 +133,7 @@
 
   if flag(Webapp)
     Build-Depends:
-     yesod, yesod-default, yesod-static, yesod-form, yesod-core,
+     yesod (>=1.2), yesod-static, yesod-form, yesod-core,
      case-insensitive, http-types, transformers, wai, wai-logger, warp,
      blaze-builder, crypto-api, hamlet, clientsession, aeson,
      template-haskell, data-default
