--- ./git-annex.cabal.orig	2014-07-09 22:09:05.000000000 +0200
+++ ./git-annex.cabal	2014-07-26 03:00:36.021998039 +0200
@@ -187,10 +187,11 @@
     CPP-Options: -DANDROID_SPLICES
 
   if flag(Webapp)
+    extensions: TemplateHaskell
     Build-Depends:
-     yesod, yesod-default, yesod-static, yesod-form, yesod-core,
+     yesod (>=1.2), yesod-static, yesod-form, yesod-core,
      http-types, transformers, wai, wai-extra, warp, warp-tls,
-     blaze-builder, crypto-api, hamlet, clientsession,
+     blaze-builder, crypto-api, clientsession,
      template-haskell, data-default, aeson,
      shakespeare
     CPP-Options: -DWITH_WEBAPP
