--- ./haskeline.cabal.orig	2012-01-03 00:30:46.000000000 +0100
+++ ./haskeline.cabal	2012-05-12 13:51:59.000000000 +0200
@@ -58,7 +58,7 @@
                            bytestring==0.9.*
         }
     }
-    Build-depends:  filepath >= 1.1 && < 1.4, mtl >= 1.1 && < 2.1,
+    Build-depends:  filepath >= 1.1 && < 1.4, mtl >= 1.1 && < 2.2,
                     utf8-string==0.3.* && >=0.3.6,
                     extensible-exceptions==0.1.* && >=0.1.1.0
     Extensions:     ForeignFunctionInterface, Rank2Types, FlexibleInstances,
