--- ./hoogle.cabal.orig	2011-05-01 19:41:04.000000000 +0200
+++ ./hoogle.cabal	2011-05-24 02:17:51.000000000 +0200
@@ -36,7 +36,7 @@
         array, bytestring, containers, directory, filepath, process, random,
         safe,
         binary,
-        parsec >= 2.1,
+        parsec,
         transformers == 0.2.*,
         uniplate == 1.6.*,
         haskell-src-exts >= 1.9 && < 1.11
