--- ./hspec.cabal.orig	2012-07-13 15:46:08.000000000 +0200
+++ ./hspec.cabal	2012-10-02 15:44:09.000000000 +0200
@@ -37,7 +37,7 @@
     , time < 1.5
     , transformers >= 0.2.0 && < 0.4.0
     , HUnit >= 1 && <= 2
-    , QuickCheck >= 2.4.0.1 && <= 2.5
+    , QuickCheck >= 2.4.0.1
     , hspec-expectations
   exposed-modules:
       Test.Hspec
@@ -68,7 +68,7 @@
     , time < 1.5
     , transformers >= 0.2.0 && < 0.4.0
     , HUnit >= 1 && <= 2
-    , QuickCheck >= 2.4.0.1 && <= 2.5
+    , QuickCheck >= 2.4.0.1
     , hspec-expectations
     , hspec-meta
 
