--- ./iteratee.cabal.orig	2012-09-05 01:52:19.000000000 +0200
+++ ./iteratee.cabal	2014-01-27 02:00:46.000000000 +0100
@@ -46,7 +46,7 @@
 
   build-depends:
     base                      >= 3       && < 6,
-    ListLike                  >= 3.0     && < 4,
+    ListLike                  >= 3.0     && < 5,
     MonadCatchIO-transformers >  0.2     && < 0.4,
     monad-control             == 0.3.* ,
     bytestring                >= 0.9     && < 0.11,
