--- iteratee.cabal.orig	2014-05-19 23:36:23 UTC
+++ iteratee.cabal
@@ -47,10 +47,10 @@ library
   build-depends:
     base                      >= 3       && < 6,
     ListLike                  >= 3.0     && < 5,
-    monad-control             == 0.3.* ,
+    monad-control             >= 0.3,
     bytestring                >= 0.9     && < 0.11,
     containers                >= 0.2     && < 0.6,
-    exceptions                >= 0.3     && < 0.7,
+    exceptions                >= 0.3     && < 0.9,
     parallel                  >= 2       && < 4,
     transformers              >= 0.2     && < 0.5,
     transformers-base         >= 0.4     && < 0.5
