--- ./leksah-server.cabal.orig	2014-06-14 21:00:28.000000000 +0200
+++ ./leksah-server.cabal	2014-07-14 07:46:10.000000000 +0200
@@ -38,8 +38,8 @@
                directory >=1.0.0.2 && <1.3, filepath >=1.1.0.1 && <1.4, ghc >=7.0.4 && <7.9,
                ltk >=0.13.1.0 && <0.14, parsec >=2.1.0.1 && <3.2,
                pretty >=1.0.1.0 && <1.2, time >=1.1 && <1.5, deepseq >=1.1 && <1.4,
-               hslogger >= 1.0.7 && <1.3, network >=2.2 && <3.0, conduit >= 1.0.8 && <1.1,
-               attoparsec-conduit >=1.0.1.2 && <1.1, attoparsec >=0.10.0.3 && <0.12,
+               hslogger >= 1.0.7 && <1.3, network >=2.2 && <3.0, conduit >= 1.0.8 && <1.2,
+               attoparsec >=0.10.0.3 && <0.12, conduit-extra, resourcet,
                transformers >=0.2.2.0 && <0.4, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.2
     if (impl(ghc >= 7.8))
        build-depends: haddock >= 2.7.2 && <2.15
@@ -101,8 +101,8 @@
                directory >=1.0.0.2 && <1.3, filepath >=1.1.0.1 && <1.6, ghc >=7.0.4 && <7.9,
                ltk >=0.13.1.0 && <0.14, parsec >=2.1.0.1 && <3.2,
                pretty >=1.0.1.0 && <1.2, time >=1.1 && <1.5, deepseq >=1.1 && <1.4,
-               hslogger >= 1.0.7 && <1.3, network >=2.2 && <3.0, conduit >= 1.0.8 && <1.1,
-               attoparsec-conduit >=1.0.1.2 && <1.1, attoparsec >=0.10.0.3 && <0.12,
+               hslogger >= 1.0.7 && <1.3, network >=2.2 && <3.0, conduit >= 1.0.8 && <1.2,
+               attoparsec >=0.10.0.3 && <0.12, conduit-extra, resourcet,
                transformers >=0.2.2.0 && <0.4, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.2
     if (impl(ghc >= 7.8))
        build-depends: haddock >= 2.7.2 && <2.15
@@ -173,8 +173,8 @@
     ghc-prof-options: -auto-all -prof
 --    ghc-shared-options: -auto-all -prof
     build-depends:  base >= 4.0.0.0 && <4.8, hslogger >= 1.0.7 && <1.3, deepseq >=1.1 && <1.4,
-               bytestring >=0.9.0.1 && <0.11, conduit >= 1.0.8 && <1.1,
-               attoparsec-conduit >=1.0.1.2 && <1.1, attoparsec >=0.10.0.3 && <0.12,
+               bytestring >=0.9.0.1 && <0.11, conduit >= 1.0.8 && <1.2,
+               attoparsec >=0.10.0.3 && <0.12, conduit-extra, resourcet,
                transformers >=0.2.2.0 && <0.4, text >=0.11.3.1 && <1.2
 
     if (impl(ghc >= 7.2))
