--- leksah-server.cabal.orig	2015-07-19 22:12:59 UTC
+++ leksah-server.cabal
@@ -41,7 +41,7 @@ library
                pretty >=1.0.1.0 && <1.2, time >=1.1 && <1.6, deepseq >=1.1 && <1.5,
                hslogger >= 1.0.7 && <1.3, conduit >= 1.0.8 && <1.3,
                conduit-extra >=1.0.0.1 && <1.2, resourcet,
-               attoparsec-conduit >=1.0.1.2 && <1.2, attoparsec >=0.10.0.3 && <0.14,
+               attoparsec >=0.10.0.3 && <0.14,
                transformers >=0.2.2.0 && <0.5, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.3,
                HTTP >=4000.1.2 && <4000.3
     if (impl(ghc >= 7.10))
@@ -103,7 +103,7 @@ executable leksah-server
                pretty >=1.0.1.0 && <1.2, time >=1.1 && <1.6, deepseq >=1.1 && <1.5,
                hslogger >= 1.0.7 && <1.3, conduit >= 1.0.8 && <1.3,
                conduit-extra >=1.0.0.1 && <1.2, resourcet,
-               attoparsec-conduit >=1.0.1.2 && <1.2, attoparsec >=0.10.0.3 && <0.14,
+               attoparsec >=0.10.0.3 && <0.14,
                transformers >=0.2.2.0 && <0.5, strict >=0.3.2 && <0.4, text >=0.11.3.1 && <1.3,
                HTTP >=4000.1.2 && <4000.3
     if (impl(ghc >= 7.10))
@@ -169,7 +169,7 @@ executable leksahecho
     build-depends:  base >= 4.0.0.0 && <4.9, hslogger >= 1.0.7 && <1.3, deepseq >=1.1 && <1.5,
                bytestring >=0.9.0.1 && <0.11, conduit >= 1.0.8 && <1.3,
                conduit-extra >=1.0.0.1 && <1.2, resourcet,
-               attoparsec-conduit >=1.0.1.2 && <1.2, attoparsec >=0.10.0.3 && <0.14,
+               attoparsec >=0.10.0.3 && <0.14,
                transformers >=0.2.2.0 && <0.5, text >=0.11.3.1 && <1.3
 
     if (impl(ghc >= 7.2))
