--- ./ltk.cabal.orig	2012-03-11 17:08:39.000000000 +0100
+++ ./ltk.cabal	2012-05-12 19:38:41.000000000 +0200
@@ -19,8 +19,8 @@
     build-depends: Cabal >=1.6.0 && <1.15, base >=4.0.0.0 && <4.6,
                containers >=0.2 && <0.5, filepath >=1.1.0 && <1.4,
                glib >=0.10.0 && <0.13, gtk >=0.10.0 && <0.13,
-               mtl >=1.1.0.2 && <2.1, parsec >=2.1.0.1 && <3.2,
-               pretty >=1.0.1.0 && <1.2, transformers >=0.2.2.0 && <0.3
+               mtl >=1.1.0.2 && <2.2, parsec >=2.1.0.1 && <3.2,
+               pretty >=1.0.1.0 && <1.2, transformers >=0.2.2.0 && <0.4
 
     exposed-modules: Default MyMissing Control.Event
                  Graphics.UI.Editor.Basics Graphics.UI.Editor.Composite
