--- ./monad-par-extras.cabal.orig	2012-05-04 19:25:26.000000000 +0200
+++ ./monad-par-extras.cabal	2012-05-12 14:11:38.000000000 +0200
@@ -53,9 +53,9 @@
                , abstract-par == 0.3.*
                , cereal == 0.3.*
                , deepseq == 1.3.*     
-               , mtl == 2.0.*
-               , random == 1.0.*          
-               , transformers == 0.2.*
+               , mtl >= 2.0
+               , random >= 1.0
+               , transformers >= 0.2
 
   ghc-options: -O2
   Other-modules:
