--- ./process-conduit.cabal.orig	2014-04-03 09:54:59.000000000 +0200
+++ ./process-conduit.cabal	2014-07-13 01:56:23.000000000 +0200
@@ -35,7 +35,6 @@
                      , process          >= 1.0
                      , conduit          >= 1.1
                      , resourcet        >= 1.1
-                     , shakespeare-text >= 1.0
                      , shakespeare
 
   ghc-options:         -Wall
