--- scion-browser 1.cabal	2012-03-30 16:51:58.000000000 +0400
+++ scion-browser.cabal	2012-06-13 17:17:38.552889037 +0400
@@ -27,7 +27,7 @@
     Cabal >= 0.10,
     haskell-src-exts >= 1.11 && < 2,
     process >= 1 && < 2,
-    tar == 0.3.*,
+    tar == 0.4.*,
     zlib == 0.5.*,
     HTTP >= 4000 && < 5000,
     deepseq >= 1.1 && < 2,
@@ -106,7 +106,7 @@
     Cabal >= 0.10,
     haskell-src-exts >= 1.11 && < 2,
     process >= 1 && < 2,
-    tar == 0.3.*,
+    tar == 0.4.*,
     zlib == 0.5.*,
     HTTP >= 4000 && < 5000,
     deepseq >= 1.1 && < 2,
