--- ./scion-browser.cabal.orig	2014-04-25 15:51:58.000000000 +0200
+++ ./scion-browser.cabal	2014-07-22 22:54:26.000000000 +0200
@@ -22,10 +22,10 @@
     base == 4.*,
     mtl >= 2,
     derive >= 2.5 && < 3,
-    text == 0.11.*,
+    text == 1.1.*,
     parsec >= 3 && < 4,
     Cabal >= 0.10,
-    haskell-src-exts >= 1.11 && < 1.15,
+    haskell-src-exts >= 1.11 && < 1.16,
     process >= 1 && < 2,
     tar >= 0.3 && < 0.5,
     zlib == 0.5.*,
@@ -97,16 +97,17 @@
 executable scion-browser
   hs-source-dirs:  src
   main-is:         Main.hs
+  extensions: TemplateHaskell
   build-depends:
     haskeline >= 0.7,
     attoparsec >= 0.10,
     base == 4.*,
     mtl >= 2,
     derive >= 2.5 && < 3,
-    text == 0.11.*,
+    text == 1.1.*,
     parsec >= 3 && < 4,
     Cabal >= 0.10,
-    haskell-src-exts >= 1.11 && < 1.15,
+    haskell-src-exts >= 1.11 && < 1.16,
     process >= 1 && < 2,
     tar >= 0.3 && < 0.5,
     zlib == 0.5.*,
