--- ./smallcheck.cabal.orig	2011-11-19 09:47:17.000000000 +0100
+++ ./smallcheck.cabal	2011-11-19 20:46:17.000000000 +0100
@@ -17,18 +17,19 @@
                progressively increasing the depth used.
 Build-Type:    Simple
 
-Extra-source-files: examples/numeric/NumProps.hs, examples/logical/LogicProps.hs,
+Extra-source-files: examples/numeric/NumProps.hs, examples/numeric/README,
+                    examples/logical/LogicProps.hs, examples/logical/README,
                     examples/imperative/Interpreter.hs, examples/imperative/Syntax.hs,
                     examples/imperative/Machine.hs, examples/imperative/Behaviour.hs,
                     examples/imperative/Properties.hs, examples/imperative/Value.hs,
                     examples/imperative/StackMap.hs, examples/imperative/Compiler.hs,
+                    examples/imperative/README, examples/listy/README, examples/regular/README,
                     examples/listy/ListProps.hs, examples/regular/Regular.hs,
+                    examples/circuits/README, examples/binarytries/README,
                     examples/circuits/BitAdd.hs, examples/circuits/Mux.hs, examples/circuits/Sad.hs,
                     examples/binarytries/BinaryTries.hs
 
-Data-files:         examples/numeric/README, examples/logical/README, examples/imperative/README,
-                    examples/listy/README, examples/regular/README, examples/circuits/README,
-                    examples/binarytries/README, README.md, CREDITS.md, CHANGES.md
+Data-files:         README.md, CREDITS.md, CHANGES.md
 
 Source-repository head
   type:     git
